# Price-Claw

./: .gitignore  README.md  TODO.md  TROUBLESHOOTING.md  app_settings.py  client.py  config.py  db.py  dev.cjs  domain_utils.py  llm_client.py  package-lock.json  package.json  pipeline_service.py  pyproject.toml  repositories.py  server.py
electron/: main.js  preload.js
extractor/: Tag_Locating.py  css_selector_generator.py  extraction_executor.py  ocr.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ExtractionPanel.tsx  HelpModal.tsx  JsonViewer.tsx  MongoInspectorCard.tsx  MongoInspectorModal.tsx  SettingsCard.tsx  SettingsModal.tsx  TaskConsole.tsx
frontend/src/config/: providers.ts
frontend/src/hooks/: useExtractionRunner.ts  useInspection.ts  useSchemas.ts  useSettings.ts
frontend/src/types/: app.ts  global.d.ts
frontend/src/utils/: jsonExport.ts
static/: index.html
