[project]
name = "odlp-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "click>=8.2.0",
    "colorama==0.4.6",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "drissionpage>=4.1.0.18",
    "fastapi>=0.128.1",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.9.0",
    "mcp[cli]>=1.12.0",
    "openai==1.78.0",
    "packaging==25.0",
    "pillow==11.2.1",
    "pip==25.0.1",
    "playwright==1.52.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pyee==13.0.0",
    "pytesseract==0.3.13",
    "python-dotenv==1.1.0",
    "python-multipart>=0.0.20",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "uv==0.7.3",
    "uvicorn>=0.35.0",
    "websockets>=16.0",
]
